# ros2_ws-src

./: leia_me.txt
drone_control/: CMakeLists.txt
drone_control/src/: drone_activate_and_go_forward.cpp  drone_publish_landing_waypoints.cpp  mission_manager.cpp  supervisor.cpp  takeoff_waypoint_publisher_8s.cpp
mrs_uav_gazebo_simulator/tmux/one_drone/: session.yml
mrs_uav_gazebo_simulator/tmux/one_drone/custom_status/: drone_status_monitor.py
my_drone_controller/: CMakeLists.txt
my_drone_controller/config/: drone_config.yaml
my_drone_controller/include/: drone_config.h
my_drone_controller/include/my_drone_controller/: command_queue.hpp  drone_controller_completo.hpp
my_drone_controller/src/: command_queue.cpp  drone_controller_completo.cpp  main_codegen.cpp
my_drone_controller1/: CMakeLists.txt  package.xml
my_drone_controller1/config/: drone_config.yaml
my_drone_controller1/src/: main_codegen.cpp
